basic placement and alignment of tooltips; TODO: responsiveness for size changes and fixing flickering when hovering onto tooltips

--- a/tooltip/src/tooltip.scss
+++ b/tooltip/src/tooltip.scss
@@ -36,28 +36,46 @@
     }
 }
 
-
-// the only thing this should do is positioning
+// responsible for positioning;
+// the only user styling that should be applied here is border
 x-tooltip{
-    display: inline-block;
+    display: block; // needed to favor horizontal tips, 
+                    // use inline-block to favor vertical
     position: absolute;
     margin: 0;
     padding: 0;
     
+    z-index: 999;
+    //white-space: nowrap;
+    overflow: visible;
     visibility: hidden;
-    opacity: 0;
     
-    @include animated(opacity, 0.2s);
+    opacity: 0;
+    @include animated((transform, opacity), 0.2s);
+    @include transformed(translateY(10px));
+    
+    &[orientation=below]{
+        @include transformed(translateY(-10px));
+    }
+    &[orientation=onleft]{
+        @include transformed(translateX(10px));
+    }
+    &[orientation=onright]{
+        @include transformed(translateX(-10px));
+    }
     
     &[visible]{
-        opacity: 1;
         visibility: visible;
+        opacity: 1;
+        @include transformed(none);
     }
 }
 
 // let user style this to style the balloon
 x-tooltip > .tooltip-content{
+    display: block;
     z-index: 1;
+    overflow: hidden;
     @include boxSizing(border-box);
 }
 
@@ -73,7 +91,7 @@ x-tooltip > .tooltip-arrow{
     display: inline-block;
     
     border-style: solid;
-    border-width: .5em; // default
+    border-width: .75em; // default
     border-color: inherit; // default
     
     // default to pointing down
